# uhd_usrp_sketches

./: README.md
sk_1_init_device/: CMakeLists.txt
sk_1_init_device/src/: main.cpp
sk_2_buff_io/: CMakeLists.txt  plt.py
sk_2_buff_io/src/: main.cpp
